@@ -58,6 +58,7 @@ dnl ********************************
 dnl *** Check for basic programs ***
 dnl ********************************
 AC_PROG_CC()
+AC_PROG_CC_C_O()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL([0.31], [no-xml])
 AC_PROG_LIBTOOL()
