@@ -1,3 +1,9 @@
+2007-05-25	Benedikt Meurer <benny@xfce.org>
+
+	* INSTALL, configure.in.in: Update for latest autoconf.
+	* terminal/terminal-dialogs.c(terminal_dialogs_show_about): Add
+	  support for new GTK+ 2.11 API.
+
 2007-04-08	Jean-François Wauthy <pollux@xfce.org>
 
 	* configure.in.in: Add support for fr translations into
